--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
-
+    <!-- my css -->
+    <link rel="stylesheet" href="style.css" />
     <title>My Portpolio | Rizki Febriansyah</title>
   </head>
   <body>
@@ -38,13 +39,13 @@
     </nav>
     <!-- akhir navbar -->
     <!-- jumbotron -->
-    <div class="jumbotron">
+    <section class="jumbotron">
       <h1 class="display-4">Hello, world!</h1>
       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
       <hr class="my-4" />
       <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </div>
+    </section>
     <!-- akhir jumbotron -->
     <!-- Optional JavaScript; choose one of the two! -->
 
