--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- akhir navbar -->
     <!-- jumbotron -->
     <section class="jumbotron">
+      <img src="img/pp.jpg" alt="Rizki Febriansyah" width="200" />
       <h1 class="display-4">Hello, world!</h1>
       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
     </section>
