--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <!-- akhir navbar -->
     <!-- jumbotron -->
-    <section class="jumbotron">
+    <section class="jumbotron text-center">
       <img src="img/pp.jpg" alt="Rizki Febriansyah" width="200" />
       <h1 class="display-4">Hello, world!</h1>
       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
