memasukan nama ke h1 dan membuat tag line di paragrap

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/pp.jpg" alt="Rizki Febriansyah" width="200" />
-      <h1 class="display-4">Hello, world!</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <h1 class="display-4">Rizki Febriansyah</h1>
+      <p class="lead">college student | Web Designer</p>
     </section>
     <!-- akhir jumbotron -->
     <!-- Optional JavaScript; choose one of the two! -->
