--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- akhir navbar -->
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/pp.jpg" alt="Rizki Febriansyah" width="200" />
+      <img src="img/pp.jpg" alt="Rizki Febriansyah" width="200" class="rounded-circle" />
       <h1 class="display-4">Rizki Febriansyah</h1>
       <p class="lead">college student | Web Designer</p>
     </section>
