--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
       <img src="img/pp.jpg" alt="Rizki Febriansyah" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Rizki Febriansyah</h1>
       <p class="lead">college student | Web Designer</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,128L30,144C60,160,120,192,180,192C240,192,300,160,360,154.7C420,149,480,171,540,170.7C600,171,660,149,720,138.7C780,128,840,128,900,149.3C960,171,1020,213,1080,213.3C1140,213,1200,171,1260,165.3C1320,160,1380,192,1410,208L1440,224L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- akhir jumbotron -->
     <!-- Optional JavaScript; choose one of the two! -->
