--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
       </svg>
     </section>
     <!-- akhir jumbotron -->
+
+    <!-- About -->
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col"></div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir About -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
