--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col"></div>
+          <div class="col">
+            <h2>About Me</h2>
+          </div>
         </div>
       </div>
     </section>
