--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- About -->
     <section id="about">
       <div class="container">
-        <div class="row">
+        <div class="row text-center">
           <div class="col">
             <h2>About Me</h2>
           </div>
