--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             <h2>About Me</h2>
           </div>
         </div>
+        <div class="row justify-content-center">
+          <div class="col-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptas porro ullam tenetur aut molestiae voluptates similique dolorum blanditiis nulla.</div>
+          <div class="col-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia odit ipsam ab dicta nam, facere quae autem, velit, error soluta blanditiis nihil fugit eius non?</div>
+        </div>
       </div>
     </section>
     <!-- akhir About -->
