akhir pembuatan about me

--- a/index.html
+++ b/index.html
@@ -56,14 +56,18 @@
     <!-- About -->
     <section id="about">
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center mb-3">
           <div class="col">
             <h2>About Me</h2>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptas porro ullam tenetur aut molestiae voluptates similique dolorum blanditiis nulla.</div>
-          <div class="col-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia odit ipsam ab dicta nam, facere quae autem, velit, error soluta blanditiis nihil fugit eius non?</div>
+        <div class="row justify-content-center fd-5 text-center">
+          <div class="col-4">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam eveniet quo veniam optio libero tempore eos. Soluta vel repudiandae officia.</p>
+          </div>
+          <div class="col-4">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos odit modi repellendus, illum, repudiandae minima animi dolor quod accusantium, blanditiis inventore perferendis atque possimus temporibus.</p>
+          </div>
         </div>
       </div>
     </section>
