--- a/index.html
+++ b/index.html
@@ -57,21 +57,84 @@
     <section id="about">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col-md-4">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fd-5 text-center">
-          <div class="col-4">
+          <div class="col-md-4">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam eveniet quo veniam optio libero tempore eos. Soluta vel repudiandae officia.</p>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos odit modi repellendus, illum, repudiandae minima animi dolor quod accusantium, blanditiis inventore perferendis atque possimus temporibus.</p>
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#e2e3e4"
+          fill-opacity="1"
+          d="M0,0L26.7,26.7C53.3,53,107,107,160,112C213.3,117,267,75,320,48C373.3,21,427,11,480,32C533.3,53,587,107,640,138.7C693.3,171,747,181,800,170.7C853.3,160,907,128,960,117.3C1013.3,107,1067,117,1120,112C1173.3,107,1227,85,1280,80C1333.3,75,1387,85,1413,90.7L1440,96L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- akhir About -->
+
+    <!-- projects -->
+    <section>
+      <div id="projects">
+        <div class="container">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2>My Projects</h2>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="img/5.jpg" class="card-img-top" alt="projects1" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="img/2.jpg" class="card-img-top" alt="projects2" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="img/3.jpg" class="card-img-top" alt="projects3" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="img/4.jpg" class="card-img-top" alt="projects4" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="img/1.png" class="card-img-top" alt="projects5" />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir projects -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
