--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <!-- footer -->
     <footer class="bg-primary text-white text-center pb-5">
-      <p>created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/rizki.design.official/" class="text-white fw-bold">Rizki Febriansyah</a></p>
+      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/rizki.design.official/" class="text-white fw-bold">Rizki Febriansyah</a></p>
     </footer>
     <!-- akhir footer -->
 
